More additions to news page, better buttons

--- a/people.html
+++ b/people.html
@@ -50,8 +50,12 @@
             </div>
             <div class="navbar-collapse collapse sabbi-navbar-collapse  navbar-nav-hov_underline" id="navbar">
                 <div class="nav-btn-wrap btn-group  pull-right">
-                    <button class="btn btn-primary" target =  "_blank" onclick="window.location.href='http://bioinfo.usu.edu/covidTracker/'">Covid 19 Tracker</button>
-                    <button class="btn btn-primary"  onclick="window.location.href='future_member.html#enroll'">Join Research</button>
+                  <a class="btn navbar-button" target="_blank" rel="noopener noreferrer" href="http://bioinfo.usu.edu/covidTracker/">
+                    Covid 19 Tracker
+                  </a>
+                  <a class="btn navbar-button" href="#enroll">
+                    Join Research
+                  </a>
                   </div>                <ul class="nav navbar-nav navbar-right" id="menu-main-nav">
                     <li>
                         <a href="index.html" title="Home">Home</a>
@@ -370,9 +374,9 @@
                                             </p>
 
                                             <p id="AboutAkshat" class="teamcontent" style="display: none;">
-                                                
 
-                                                
+
+
                                             </p>
                                         </div>
                                 </div>
