--- a/index.html
+++ b/index.html
@@ -75,10 +75,10 @@
                     <!-- <div class="row">
                     <div class="nav-btn-wrap"><a href="future_member.html#enroll" class="btn btn-primary pull- ">Join Research</a></div> -->
                     <div class="nav-btn-wrap btn-group  pull-right">
-                      <a class="btn navbar-button" target="_blank" rel="noopener noreferrer" href="http://bioinfo.usu.edu/covidTracker/">
+                      <a class="navbar-button" target="_blank" rel="noopener noreferrer" href="http://bioinfo.usu.edu/covidTracker/">
                         Covid 19 Tracker
                       </a>
-                      <a class="btn navbar-button" href="#enroll">
+                      <a class="navbar-button" href="#enroll">
                         Join Research
                       </a>
                       </div>
