--- a/news.html
+++ b/news.html
@@ -53,10 +53,10 @@
                     </div>
             <div class="navbar-collapse collapse sabbi-navbar-collapse  navbar-nav-hov_underline" id="navbar">
                 <div class="nav-btn-wrap btn-group  pull-right">
-                  <a class="btn navbar-button" target="_blank" rel="noopener noreferrer" href="http://bioinfo.usu.edu/covidTracker/">
+                  <a class="navbar-button" target="_blank" rel="noopener noreferrer" href="http://bioinfo.usu.edu/covidTracker/">
                     Covid 19 Tracker
                   </a>
-                  <a class="btn navbar-button" href="#enroll">
+                  <a class="navbar-button" href="#enroll">
                     Join Research
                   </a>
                   </div>                <ul class="nav navbar-nav navbar-right" id="menu-main-nav">
