Added template news

--- a/news-template.html
+++ b/news-template.html
@@ -27,10 +27,9 @@
     <link href="assets/css/bootstrap-theme.min.css" rel="stylesheet">
     <link href="assets/css/main.css" rel="stylesheet">
     <link href="assets/css/style.css" rel="stylesheet">
-    <link href="pages/news/news.css" rel="stylesheet">
+    <link href="pages/news-template/news-template.css" rel="stylesheet">
     <link rel="icon" href="assets/img/red_logo.png">
-    <script src="assets/js/vendor/modernizr-2.8.3.min.js">
-    </script>
+    <script src="assets/js/vendor/modernizr-2.8.3.min.js"></script>
 </head>
 <body class="auth-theme-rashmore page-futuremember">
     <!--[if lt IE 8]>
@@ -179,7 +178,7 @@
     <header class="sabbi-page-header page-header-lg">
         <div class="page-header-content conternt-center">
             <div class="header-title-block">
-                <h1 class="page-title">News</h1>
+                <h1 class="page-title">Article</h1>
             </div>
         </div>
     </header><!-- /.sabbi-page-header  -->
@@ -187,7 +186,7 @@
         <div class="container">
             <ol class="breadcrumb sabbi-breadcrumb list-unstyled list-inline">
                 <li><a href="index.html">Home</a></li>
-                <li class="active">News</li>
+                <li class="active">Article</li>
             </ol>
         </div>
     </div><!-- /.auth-breadcrumb-wrap -->
@@ -196,78 +195,37 @@
 
 <article class="container-fluid">
   <div class="row flex-row">
+    <section class="col-sm-6 col-sm-offset-3">
+      <div class="article-header">KAABiL deepHPi Server is Now Online!</div>
+    </section>
+  </div>
 
-    <!-- News - General -->
-    <article class="flex-col">
-      <div class="text-center col-header" style="font-size: 140%;"><b>General</b></div><br>
-      <section class="thumbnail news-item">
-        <div class="caption">
-          <h5 class="header">Naveen presents at International Plant Animal Genome Conference</h5>
-          <p class="desc">
-            Naveen presented a poster on citSatdb and gave an oral presentation on GreeningDB.
-          </p>
-        </div>
-      </section>
+  <div class="row flex-row">
+    <section class="col-sm-6 col-sm-offset-3">
+      <div class="article-desc">KAABiL offers another useful tool to meet the growing demands of modern researchers.</div>
+    </section>
+  </div>
 
-      <section class="thumbnail news-item">
-        <div class="caption">
-          <h5 class="header">New HPC Admin: Shelby McCowan</h5>
-          <p class="desc">
-            Shelby McCowan has joined the team and will be taking over as the new HPC Admin.
-          </p>
-        </div>
-      </section>
+  <div class="row flex-row">
+    <section class="col-sm-6 col-sm-offset-3">
+      <img src="assets/img/events/Sand_2020/deephpi.png">
+    </section>
+  </div>
 
-      <section class="thumbnail news-item">
-        <div class="caption">
-          <h5 class="header">New Graduate Research Assistant</h5>
-          <p class="desc">
-            Akshat Kumar has joined KAABiL as a new graduate research assistant.
-          </p>
-        </div>
-      </section>
-    </article>
-
-    <!-- News - Science -->
-    <article class="flex-col">
-      <div class="text-center col-header" style="font-size: 140%;"><b>Science</b></div><br>
-      <section>
-        <a class="thumbnail news-item" href="news-template.html">
-          <div class="caption">
-            <h5 class="header">deepHPI is Online!</h5>
-            <p class="desc">
-              To bolster and accelerate research on infectious disease, we have implemented deepHPI.
-              The deepHPI web server is a platform that uses Convolutional Neural Network (CNN)...
-            </p>
-          </div>
-        </a>
-      </section>
-
-      <section class="thumbnail news-item">
-        <div class="caption">
-          <h5 class="header">COVID-19 Tracker</h5>
-          <p class="desc">
-            KAABiL now has a dashboard for tracking global COVID-19 data
-          </p>
-        </div>
-      </section>
-    </article>
-
-    <!-- Blog -->
-    <article class="col-sm-3">
-      <div class="text-center col-header" style="font-size: 140%;"><b>Blog</b></div><br>
-      <section class="thumbnail news-item">
-        <div class="caption">
-          <h5 class="header">New Blog</h5>
-          <p class="desc">
-            KAABiL has a blog that we might write to one day.
-          </p>
-        </div>
-      </section>
-    </article>
-
+  <div class="row flex-row">
+    <section class="col-sm-6 col-sm-offset-3">
+      <p class="article-paragraph">
+        To bolster and accelerate research on infectious disease, we have implemented deepHPI. The deepHPI web
+        server is a platform that uses Convolutional Neural Network (CNN) models for the accurate prediction of
+        host-pathogen protein-protein interactions. The server delivers four host-pathogen model types: plant-pathogen,
+        human-bacteria, human-virus, and animal-pathogen. This is to account for a wide range of analyses and use cases,
+        as well as provide an enriched visualization of the resulting host-pathogen network.
+      </p>
+    </section>
   </div>
 </article>
+
+
     </section>
     <!-- /.stage-future_member -->
 
@@ -322,25 +280,15 @@
                             </section>
                         </div>
                         <div class="col-sm-5">
-                            <section class="widget widget_sec">
-                                <div class="widget-main">
-                                    <h2 class="widget-title">Publications</h2>
-                                    <ul class="list list-unstyled list-footer-nav">
-                                        <li class="footer_text"><a href="lab_journal.html">Journal Articles</a></li>
-                                        <li class="footer_text"><a href="lab_conf-talk.html">Conferences and Talks</a></li>
-                                    </ul>
-                                </div>
-                            </section>
-                            <!-- <section class="widget widget_sec">
-                                <div class="widget-main">
-                                    <h2 class="widget-title">Services</h2>
-                                    <ul class="list list-unstyled list-footer-nav">
-                                        <li class="footer_text"><a href="#">Editorial Services</a></li>
-                                        <li class="footer_text"><a href="#">University Services</a></li>
-                                        <li class="footer_text"><a href="#">Professonal Services</a></li>
-                                    </ul>
-                                </div>
-                            </section> -->
+                          <section class="widget widget_sec">
+                              <div class="widget-main">
+                                  <h2 class="widget-title">Publications</h2>
+                                  <ul class="list list-unstyled list-footer-nav">
+                                      <li class="footer_text"><a href="lab_journal.html">Journal Articles</a></li>
+                                      <li class="footer_text"><a href="lab_conf-talk.html">Conferences and Talks</a></li>
+                                  </ul>
+                              </div>
+                          </section>
                         </div>
                     </div>
                 </div>
@@ -369,20 +317,6 @@
                                     </div>
                                 </li>
                             </ul>
-                            <!-- <ul class="event-list list-unstyled">
-                                <li>
-                                    <h4 class="title"><a href="events_single.html">Study Tour and Christmas Trip</a></h4>
-                                    <div class="date">21st June 2016</div>
-                                </li>
-                                <li>
-                                    <h4 class="title"><a href="events_single.html">Mid Year Lab Party and Summer vacation</a></h4>
-                                    <div class="date">21st June 2016</div>
-                                </li>
-                                <li>
-                                    <h4 class="title"><a href="events_single.html">Science Award 2015-2016</a></h4>
-                                    <div class="date">21st June 2016</div>
-                                </li>
-                            </ul>  -->
                             <div class="action-wrap"><a href="lab_events.html" class="btn btn-unsolemn btn-action">View all Events</a></div>
                         </address>
                     </div>
